# fugue

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  =3.0.0  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  Untitled.ipynb  requirements.txt  setup.cfg  setup.py  x.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  compatibility.md  deprecation.md  questions.md
.github/workflows/: codeql.yml  lint.yml  publish.yml  scorecards.yml  spark.yml  test.yml  test36.yml  test37.yml  test38.yml  test_all.yml  test_core.yml  test_dask.yml  test_legacy_pyspark.yml  test_no_sql.yml  test_notebook.yml  test_ray.yml  test_spark.yml  test_spark_connect.yml  test_win.yml  testnotebook.yml  testwin.yml
docs/: api.rst  community.rst  conf.py  index.rst  introduction.rst  top_api.rst  tutorials.rst  xlike.rst
docs/_templates/: package.rst_t
docs/api/: fugue.bag.rst  fugue.builtins.rst  fugue.collections.rst  fugue.column.rst  fugue.creator.rst  fugue.dag.rst  fugue.dataframe.rst  fugue.dataset.rst  fugue.execution.rst  fugue.extensions.builtins.rst  fugue.extensions.creator.rst  fugue.extensions.outputter.rst  fugue.extensions.processor.rst  fugue.extensions.rst  fugue.extensions.transformer.rst  fugue.outputter.rst  fugue.processor.rst  fugue.rpc.rst  fugue.rst  fugue.sql.rst  fugue.transformer.rst  fugue.utils.rst  fugue.workflow.rst
docs/api_dask/: fugue_dask.rst
docs/api_duckdb/: fugue_duckdb.rst
docs/api_ibis/: fugue_ibis.execution.rst  fugue_ibis.rst
docs/api_ray/: fugue_ray.rst
docs/api_spark/: fugue_spark.rst  fugue_spark.utils.rst
docs/api_sql/: fugue_sql.antlr.rst  fugue_sql.rst
fugue/: __init__.py  api.py  constants.py  dataset.py  dev.py  exceptions.py  interfaceless.py  plugins.py  registry.py
fugue/_utils/: display.py  exception.py  interfaceless.py  io.py  misc.py  register.py  registry.py  sql.py
fugue/bag/: __init__.py  (+2 more)
fugue_contrib/: __init__.py  contrib.py
fugue_dask/: __init__.py  _constants.py  _dask_sql_wrapper.py  _io.py  _utils.py  dask_sql_wrapper.py  dataframe.py  execution_engine.py  ibis_engine.py  registry.py  test_fixtures.py  tester.py  utils.py
fugue_duckdb/: __init__.py  _io.py  _utils.py  dask.py  dataframe.py  execution_engine.py  ibis_engine.py  registry.py  tester.py
fugue_ibis/: __init__.py  _compat.py  _lazy.py  _utils.py  dataframe.py  execution_engine.py  extensions.py
fugue_modin/: __init__.py  dataframe.py  execution_engine.py  utils.py
fugue_notebook/: __init__.py  env.py
fugue_polars/: __init__.py  _utils.py  polars_dataframe.py  registry.py
fugue_ray/: __init__.py  _constants.py  _ray_utils.py  dataframe.py  dateframe.py  execution_engine.py  registry.py  tester.py
fugue_spark/: __init__.py  _constants.py  dataframe.py  execution_engine.py  ibis_engine.py  registry.py  tester.py
fugue_sql/: __init__.py  _constants.py  _parse.py  _utils.py  _visitors.py  exceptions.py  parse.py  utils.py  visitors.py  workflow.py
fugue_test/: __init__.py  _utils.py  bag_suite.py  builtin_suite.py  dataframe_suite.py  execution_suite.py  fixtures.py  ibis_suite.py  utils.py
fugueless/: _utils.py  transform.py
scripts/: add_avro_jar.sh  setupsparkconnect.sh
tests/: test_dummy.py
(+278 files in other folders)
