[metadata]
description-file = README.md

[tool:pytest]
addopts =
  --cov=fugue
  --cov=fugue_test
  --cov=fugue_spark
  --cov=fugue_dask
  --cov=fugue_sql
  --cov-report=term-missing:skip-covered
  -vvv
spark_options =
  spark.master: local[*]
  spark.sql.catalogImplementation: in-memory
  spark.sql.shuffle.partitions: 4
  spark.default.parallelism: 4
  spark.executor.cores: 4

[coverage:run]
omit =
  fugue_sql/_antlr/*

[flake8]
ignore = E24,E203,W503,C408,A003,W504,C407,C405
max-line-length = 88
format = pylint
exclude = .svc,CVS,.bzr,.hg,.git,__pycache__,venv,tests/*,docs/*
max-complexity = 10

[pylint.'MESSAGES CONTROL']
disable = C0103,C0114,C0115,C0116,C0122,C0200,C0302,C0411,C0415,E0401,E0712,R0201,R0205,R0801,R0902,R0903,R0904,R0911,R0912,R0913,R0914,R1705,R1710,R1720,R1724,W0102,W0107,W0108,W0201,W0212,W0221,W0223,W0511,W0613,W0703,W1116
# TODO: R0205: inherits from object, can be safely removed

[mypy-fugue_sql._antlr.*]
ignore_errors = True
