[metadata]
description-file = README.md
license_files = LICENSE

[tool:pytest]
addopts =
  --cov=fugue
  --cov=fugue_test
  --cov=fugue_spark
  --cov=fugue_dask
  --cov=fugue_ray
  --cov=fugue_sql
  --cov=fugue_duckdb
  --cov=fugue_ibis
  --cov-report=term-missing:skip-covered
  -vvv
spark_options =
  spark.master: local[*]
  spark.sql.catalogImplementation: in-memory
  spark.sql.shuffle.partitions: 4
  spark.default.parallelism: 4
  spark.executor.cores: 4
  spark.sql.execution.arrow.pyspark.enabled: true
  spark.sql.execution.arrow.enabled: true
  spark.sql.adaptive.enabled: false

[coverage:run]
omit =
  fugue_sql/_antlr/*

[flake8]
ignore = E24,E203,W503,C401,C408,A001,A003,W504,C407,C405,B023
max-line-length = 88
format = pylint
exclude = .svc,CVS,.bzr,.hg,.git,__pycache__,venv,tests/*,docs/*
max-complexity = 10

[mypy-fugue_sql._antlr.*]
ignore_errors = True
