[metadata]
description-file = README.md
license_files = LICENSE

[testenv]
setenv =
    COV_CORE_SOURCE=
    COV_CORE_CONFIG=.coveragerc
    COV_CORE_DATAFILE=.coverage

[tool:pytest]
addopts =
  -p pytest_cov
  --cov=fugue
  --cov=fugue_test
  --cov=fugue_spark
  --cov=fugue_dask
  --cov=fugue_ray
  --cov=fugue_duckdb
  --cov=fugue_ibis
  --cov=fugue_polars
  --ignore=tests/fugue_spark/test_spark_connect.py
  --cov-report=term-missing:skip-covered
  -vvv
spark_options =
  spark.master: local[*]
  spark.sql.catalogImplementation: in-memory
  spark.sql.shuffle.partitions: 4
  spark.default.parallelism: 4
  spark.executor.cores: 4
  spark.sql.execution.arrow.pyspark.enabled: true
  spark.sql.adaptive.enabled: false
fugue_test_conf =
  # don't move for testing purpose
  fugue.test.dummy=dummy
  fugue.test:bool=true
  # ray settings
  ray.num_cpus:int=2
  # dask settings
  dask.processes:bool=true
  dask.n_workers:int=3
  dask.threads_per_worker:int=1



[coverage:run]
omit =
  fugue_sql/_antlr/*
  fugue_test/plugins/*
  fugue_test/fixtures.py
  fugue_test/__init__.py

[flake8]
ignore = E24,E203,W503,C401,C408,A001,A003,A005,W504,C407,C405,B023,B028
max-line-length = 88
format = pylint
exclude = .svc,CVS,.bzr,.hg,.git,__pycache__,venv,tests/*,docs/*
max-complexity = 10
